--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ nav ul li{
 
 #myProgressBar{
     width: 80vw;
+    cursor: pointer;
 }
 
 .icon{
@@ -103,4 +104,26 @@ border-radius:34px;
 
 }
 
+.songList1{
+    height: 300px;
+    overflow-x:auto;
+    width: 410px;
+    margin-top: 20px;
+  
+}
 
+.songListPlay span i{
+    cursor: pointer;
+}
+
+.songInfo{
+    position: absolute;
+    left: 9vw;
+    padding-top: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+.songInfo img{
+    opacity: 0;
+    transition: opacity 0.5s ease-in;
+}
